syntax = "proto3";

package org.example.lightcontrol;

option java_multiple_files = true;
option java_package = "org.example.lightcontrol.lightcontrolservice";
option java_outer_classname = "lightcontrolserviceproto";

service Lightcontrolservice {
  // Light turn on and off Client-side streaming RPC
  rpc ToggleLights(stream ToggleRequest) returns (LightcontrolRespons);

  //
  rpc changeLightColor(ColorRequest) returns(stream LightcontrolRespons);

}
message ToggleRequest{
  string light_id = 1;
  bool turn_on=2;
}

message ColorRequest {
  string light_id = 1;
  string color=2;
}
message LightcontrolRespons{
  string message=1;
}
